--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "backend",
+  "name": "backend-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "start-watch": "nodemon --watch . app.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,8 +13,8 @@
     "nodemon": "^2.0.2"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "express": "^4.17.1",
-    "express-http-proxy": "^1.6.0",
     "redis": "^3.0.2"
   }
 }
