--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -13,8 +13,8 @@
     "nodemon": "^2.0.2"
   },
   "dependencies": {
+    "async-redis": "^1.1.7",
     "compression": "^1.7.4",
-    "express": "^4.17.1",
-    "redis": "^3.0.2"
+    "express": "^4.17.1"
   }
 }
