Added ports info to docker compose for Gateway

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,7 +54,11 @@ services:
     environment:
       NODE_ENV: "development"
       API_HOST: "backend-api"
+      API_HTTP_PORT: "6000"
+      API_HTTPS_PORT: "6443"
       FILESERVER_HOST: "backend-fileServer"
+      FILESERVER_HTTP_PORT: "4000"
+      FILESERVER_HTTPS_PORT: "4443"
     working_dir: /home/node/app/backend/gateway/
     volumes:
       - .:/home/node/app/:ro
