--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
     user: "node"
     environment:
       NODE_ENV: "development"
+      GATEWAY_HOST: "backend-gateway"
+      GATEWAY_HTTP_PORT: "5000"
+      GATEWAY_HTTPS_PORT: "5443"
     working_dir: /home/node/app/frontend/
     volumes:
       - .:/home/node/app/
