--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "async-redis": "^1.1.7",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   }
 }
