--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,9 @@ services:
       - "4443:4443"
     environment:
       NODE_ENV: "development"
+      GATEWAY_HOST: "backend-gateway"
+      GATEWAY_HTTP_PORT: "5000"
+      GATEWAY_HTTPS_PORT: "5443"
     working_dir: /home/node/app/backend/fileServer/
     volumes:
       - .:/home/node/app/:ro
@@ -41,6 +44,9 @@ services:
     environment:
       NODE_ENV: "development"
       REDIS_HOST: "redis"
+      GATEWAY_HOST: "backend-gateway"
+      GATEWAY_HTTP_PORT: "5000"
+      GATEWAY_HTTPS_PORT: "5443"
     working_dir: /home/node/app/backend/api/
     volumes:
       - .:/home/node/app/:ro
