--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -16,6 +16,7 @@
     "async-redis": "^1.1.7",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "cross-fetch": "^3.0.4",
     "express": "^4.17.1"
   }
 }
